# worktime

./: .env  .gitignore  Cargo.toml  README.md  deploy.sh  worktime.db
.sqlx/: query-01e9a1be5360b6d1b61da7a3120f889113bb7cb0a107bba7f0d9261306fa9a8e.json  query-058f11c7b651a7e3ec376e0aa768e92d13e9f57b27e930d9055f74dce89227ab.json  query-068e7eb763f9b7397a731de62b0470f5ee30db9583e8649a6d95505dd83f9fcb.json  query-18e277de1598ba3e88fee87c2942db8c674a01d70230cbdcc364dc8b33ea964f.json  query-40a34710fb09b2b6f0b79168e388c3b312ab17d49f6fb74689da7c251d2ed699.json  query-48fecd177430b4976131ff6fca6dde87f5dedbbc96e7cd671ce366adad77b02b.json  query-8b38deb3f35ca47fa8153b2aeb66a70fbebb7e059097eee63c4c63f101a4b7dc.json  query-921207bb6cb120aa39de35a786cfba630b9b7602475ad05f3722f95f4778490d.json  query-a1e7cf39df1327f87576fcca62939cf7171b26f204acf018d874336e4b47d299.json  query-bb3f8c89ce2bf26f0cdb9289bfca2d6c1045d5c274a2154ebbc335123f71a858.json  query-bba9d359ed892c765078d1d307d403a595c54fb7d3cd3020258481494acc835c.json  query-c18622c65a3ce6f30922703a92d34f27407608108e2f2d5a8167873f36b0c9bf.json  query-d5c79d96d38da1bee70941900a5eefde5313639365a953d0ac4db750eaa6dd49.json  query-e09d9905ca525af99358b1ceb23f5d36b8aaae3764541afb6741cc12b44d74cf.json  query-e7e201711e8d24af621e5101a21c341ab11b6168f201f911dd56da0f8f8dd230.json
migrations/: 0001_create_work_sessions.sql
src/: README.md  cli.rs  db.rs  err.rs  main.rs  stdin.rs  stdout.rs  time.rs
