[package]
name = "worktime"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
dialoguer = "0.11.0"
sqlx = { version = "0.8.6", features = [
	"sqlite",
	"runtime-tokio",
	"macros",
	"chrono",
] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
